added the docker structure

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# Backend API URL (Railway)
-VITE_API_URL="https://web-production-e9f4b.up.railway.app"
+# Backend API URL - Configure your service endpoint
+VITE_API_URL="http://15.160.244.28:8080"
