Gestiona enviament de media

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Backend API URL (Railway)
-VITE_API_URL="https://web-production-e9f4b.up.railway.app"
+VITE_API_URL=https://web-production-e9f4b.up.railway.app
