fix: configuració multi-entorn (local + production)

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-# Backend API URL (Railway)
+# Backend API URL - PRODUCTION (Vercel usarà aquest)
+# Railway backend
 VITE_API_URL=https://web-production-e9f4b.up.railway.app
