Fix CORS: Accept all Vercel deployments dynamically

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Backend API URL - PRODUCTION (Vercel usarà aquest)
 # Railway backend
-VITE_API_URL=https://web-production-e9f4b.up.railway.app
+VITE_API_URL=https://web-production-261e.up.railway.app
+
